# hperf

./: .gitignore  Analyzer.py  Parser.py  Profiler.py  README.en.md  README.md  README.zh.md  VERSION  analyzer.py  connector.py  controller.py  detect_pmc.py  environment.yml  event_group.py  freeze.yml  hp-analyze.py  hp-collect.py  hp-forecast.py  hp-vis.py  hperf.py  hperf_exception.py  opt_parser.py  profiler.py  requirements.txt  task.py  visualizer.py
Analyzer/: Analyzer.py
Connector/: Connector.py  LocalConnector.py  RemoteConnector.py
Controller/: Controller.py
Parser/: Parser.py
Profiler/: EventGroup.py  Profiler.py
ShellManager/: ShellManager.py
Task/: Task.py
arch/: amd.py  arm.py  arm_kunpeng.py  intel_cascadelake.py  intel_icelake.py
docs/: dev_doc.md  glossary.md  issue_branch_commit.md
hperf-dashboard/: .eslintrc.json  middleware.ts  package.json  pnpm-lock.yaml  tsconfig.json
hperf-forecasting/: .gitignore  eval.ipynb  pyproject.toml
hperf-forecasting/hperf_forecasting/: __init__.py
hperf-forecasting/hperf_forecasting/data/: __init__.py  dataset.py  format.py  util.py
hperf-forecasting/hperf_forecasting/predictor/: __init__.py  arima.py  autots.py  base.py  ewm.py  lr.py  prophet.py
hperf-forecasting/tests/data/: cpu_utilization_s1.csv  cpu_utilization_s2.csv  cpu_utilization_s3.csv
prediction/: prophet.ipynb  prophet.py
profiler/: event_group.py  profiler.py
test/: analyzer_test.py  argparse_test.py  connector_test.py  cpu_topo.ipynb  create_tmp_dir.py  data_aggr.ipynb  demo.sh  dict_test.py  exception_test.py  mat_mul  (+10 more)
(+52 files in other folders)
