[tool.poetry]
name = "hperf-forecasting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
numpy = "^1.16"
pyarrow = "^17.0.0"
hyperopt = "^0.2.7"
pmdarima = "^2.0.4"
arch = "^7.0.0"
prophet = "^1.1.5"
autots = "^0.6.14"

[tool.poetry.group.test.dependencies]
pytest-randomly = "^3.15.0"
pytest = "^8.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
matplotlib = "^3.9.1"
black = "^24.4.2"
isort = "^5.13.2"
polars = {extras = ["all"], version = "^1.2.0"}

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
